# bash-gpt

./: .gitignore  Cargo.toml  README.md  example.env
src/: arguments.rs  gpt_fetch.rs  main.rs
