[package]
name = "bash-gpt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.1.1"
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
